{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 90,
  "lineage": "2be7635a-e032-7ed1-6c4e-7fed07ad7fab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3e9d59472cd5c10",
            "domain": "vpc",
            "id": "eipalloc-0d3e9d59472cd5c10",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-17-199-55.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.199.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-nat-ip"
            },
            "tags_all": {
              "Name": "terraform-nat-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:internet-gateway/igw-06f2f3b2c2a68b31b",
            "id": "igw-06f2f3b2c2a68b31b",
            "owner_id": "391504138775",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-04274fc0e90ba232d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3e9d59472cd5c10",
            "connectivity_type": "public",
            "id": "nat-071198c842f904f40",
            "network_interface_id": "eni-061042fc80bbc83fa",
            "private_ip": "10.0.1.12",
            "public_ip": "3.17.199.55",
            "subnet_id": "subnet-061da99499a0ad2c6",
            "tags": {
              "Name": "terraform-nat"
            },
            "tags_all": {
              "Name": "terraform-nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:route-table/rtb-019e99ef5e8d8b39c",
            "id": "rtb-019e99ef5e8d8b39c",
            "owner_id": "391504138775",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-071198c842f904f40",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private"
            },
            "tags_all": {
              "Name": "terraform-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04274fc0e90ba232d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:route-table/rtb-0904c884fdbfc1abe",
            "id": "rtb-0904c884fdbfc1abe",
            "owner_id": "391504138775",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f2f3b2c2a68b31b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public"
            },
            "tags_all": {
              "Name": "terraform-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04274fc0e90ba232d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00af94c24129b2f48",
            "route_table_id": "rtb-019e99ef5e8d8b39c",
            "subnet_id": "subnet-001dc3d9b7d62d6d2"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091dae2a38aefe36e",
            "route_table_id": "rtb-019e99ef5e8d8b39c",
            "subnet_id": "subnet-04dcf8306b7581547"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013b0b9880bfc1e95",
            "route_table_id": "rtb-019e99ef5e8d8b39c",
            "subnet_id": "subnet-0d6bf31f2d30a41e7"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private3",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d0509a1bd326c8b",
            "route_table_id": "rtb-0904c884fdbfc1abe",
            "subnet_id": "subnet-061da99499a0ad2c6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ae82cf0f2f09eb6",
            "route_table_id": "rtb-0904c884fdbfc1abe",
            "subnet_id": "subnet-02a7392d865927e72"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:security-group/sg-0a44b1b2300fece2d",
            "description": "managed by terrafrom for db servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a44b1b2300fece2d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004e3c2c2b00f7131"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-DBSG",
            "name_prefix": "",
            "owner_id": "391504138775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-DBSG"
            },
            "tags_all": {
              "Name": "terraform-DBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04274fc0e90ba232d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:security-group/sg-004e3c2c2b00f7131",
            "description": "This is for terraforms web servers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004e3c2c2b00f7131",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-webSG",
            "name_prefix": "",
            "owner_id": "391504138775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-webSG"
            },
            "tags_all": {
              "Name": "terraform-webSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04274fc0e90ba232d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:subnet/subnet-001dc3d9b7d62d6d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001dc3d9b7d62d6d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391504138775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-1"
            },
            "tags_all": {
              "Name": "terraform-private-1"
            },
            "vpc_id": "vpc-04274fc0e90ba232d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:subnet/subnet-04dcf8306b7581547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dcf8306b7581547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391504138775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-2"
            },
            "tags_all": {
              "Name": "terraform-private-2"
            },
            "vpc_id": "vpc-04274fc0e90ba232d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:subnet/subnet-0d6bf31f2d30a41e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6bf31f2d30a41e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391504138775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-3"
            },
            "tags_all": {
              "Name": "terraform-private-3"
            },
            "vpc_id": "vpc-04274fc0e90ba232d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:subnet/subnet-061da99499a0ad2c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061da99499a0ad2c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391504138775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-1"
            },
            "tags_all": {
              "Name": "terraform-public-1"
            },
            "vpc_id": "vpc-04274fc0e90ba232d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:subnet/subnet-02a7392d865927e72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a7392d865927e72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391504138775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-2"
            },
            "tags_all": {
              "Name": "terraform-public-2"
            },
            "vpc_id": "vpc-04274fc0e90ba232d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391504138775:vpc/vpc-04274fc0e90ba232d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019f44e1877bbb3ea",
            "default_route_table_id": "rtb-0dfd1de39efd76411",
            "default_security_group_id": "sg-0c2ba55ea4274fcb5",
            "dhcp_options_id": "dopt-cb2a9ca0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04274fc0e90ba232d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dfd1de39efd76411",
            "owner_id": "391504138775",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}